src/objects/PreOrder__c.object
<CustomObject>
    <description>Contain all pre-order information that has been requested by a customer and vehicle pre-order information.</description>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClosedReason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vehicle purchased</fullName>
                </value>
                <value>
                    <fullName>Wait time too long</fullName>
                </value>
                <value>
                    <fullName>Change of mind</fullName>
                </value>
                <value>
                    <fullName>Purchased Competitor Vehicle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pre Orders</relationshipLabel>
        <relationshipName>Pre_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VehicleInterested__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle Interested</label>
        <referenceTo>Car_Model__c</referenceTo>
        <relationshipLabel>Pre Orders</relationshipLabel>
        <relationshipName>Pre_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model_Class__c</fullName>
        <description>This field is auto populated based on Vehicle model code field</description>
        <label>Vehicle Model Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-Class</fullName>
                </value>
                <value>
                    <fullName>B-Class</fullName>
                </value>
                <value>
                    <fullName>CLA Coupe</fullName>
                </value>
                <value>
                    <fullName>CLA Shooting Brake</fullName>
                </value>
                <value>
                    <fullName>C-Class Saloon</fullName>
                </value>
                <value>
                    <fullName>C-Class Coupe (Old)</fullName>
                </value>
                <value>
                    <fullName>C-Class Coupe (New)</fullName>
                </value>
                <value>
                    <fullName>C-Class Estate</fullName>
                </value>
                <value>
                    <fullName>SLC (SLK)</fullName>
                </value>
                <value>
                    <fullName>E-Class Saloon (Old)</fullName>
                </value>
                <value>
                    <fullName>E-Class Saloon (New)</fullName>
                </value>
                <value>
                    <fullName>E-Class Estate (Old)</fullName>
                </value>
                <value>
                    <fullName>E-Class Coupe</fullName>
                </value>
                <value>
                    <fullName>E-Class Cabriolet</fullName>
                </value>
                <value>
                    <fullName>CLS Coupe</fullName>
                </value>
                <value>
                    <fullName>CLS Shooting Brake</fullName>
                </value>
                <value>
                    <fullName>S-Class Saloon SWB &amp; LWB</fullName>
                </value>
                <value>
                    <fullName>Mercedes-Maybach S-Class Saloon</fullName>
                </value>
                <value>
                    <fullName>SL</fullName>
                </value>
                <value>
                    <fullName>Mercedes-AMG GT Coupe</fullName>
                </value>
                <value>
                    <fullName>S-Class Coupe</fullName>
                </value>
                <value>
                    <fullName>GLA</fullName>
                </value>
                <value>
                    <fullName>GLC SUV</fullName>
                </value>
                <value>
                    <fullName>GLE SUV</fullName>
                </value>
                <value>
                    <fullName>GLE Coupe</fullName>
                </value>
                <value>
                    <fullName>GLS</fullName>
                </value>
                <value>
                    <fullName>G-Class Cab Chassis</fullName>
                </value>
                <value>
                    <fullName>G-Class (G350d &amp; G63)</fullName>
                </value>
                <value>
                    <fullName>V-Class</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Model_Code__c</fullName>
        <label>Vehicle Model Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>W176</fullName>
                </value>
                <value>
                    <fullName>W246</fullName>
                </value>
                <value>
                    <fullName>C117</fullName>
                </value>
                <value>
                    <fullName>X117</fullName>
                </value>
                <value>
                    <fullName>W205</fullName>
                </value>
                <value>
                    <fullName>C204</fullName>
                </value>
                <value>
                    <fullName>C205</fullName>
                </value>
                <value>
                    <fullName>S205</fullName>
                </value>
                <value>
                    <fullName>R172</fullName>
                </value>
                <value>
                    <fullName>W212</fullName>
                </value>
                <value>
                    <fullName>W213</fullName>
                </value>
                <value>
                    <fullName>S212</fullName>
                </value>
                <value>
                    <fullName>C207</fullName>
                </value>
                <value>
                    <fullName>A207</fullName>
                </value>
                <value>
                    <fullName>C218</fullName>
                </value>
                <value>
                    <fullName>X218</fullName>
                </value>
                <value>
                    <fullName>W/V222</fullName>
                </value>
                <value>
                    <fullName>X222</fullName>
                </value>
                <value>
                    <fullName>R231</fullName>
                </value>
                <value>
                    <fullName>C190</fullName>
                </value>
                <value>
                    <fullName>C217</fullName>
                </value>
                <value>
                    <fullName>X156</fullName>
                </value>
                <value>
                    <fullName>X253</fullName>
                </value>
                <value>
                    <fullName>W166</fullName>
                </value>
                <value>
                    <fullName>C292</fullName>
                </value>
                <value>
                    <fullName>X166</fullName>
                </value>
                <value>
                    <fullName>W461 Professional Series</fullName>
                </value>
                <value>
                    <fullName>W461</fullName>
                </value>
                <value>
                    <fullName>W463</fullName>
                </value>
                <value>
                    <fullName>447</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pre Order</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Pre Order</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>